set (SOURCES render/Shape.cpp core/Vector3.cpp core/Matrix4.cpp core/Vector4.cpp physics/PhysicsObject.cpp physics/PhysicsObject.h physics/ForceGenerator.cpp physics/ForceGenerator.h physics/ForceRegistry.cpp physics/ForceRegistry.h physics/PhysicsContact.cpp physics/PhysicsContact.h physics/PhysicsContactResolver.cpp physics/PhysicsContactResolver.h physics/ObjectLink.cpp physics/ObjectLink.h physics/PhysicsWorld.cpp physics/PhysicsWorld.h physics/ContactGenerator.cpp physics/ContactGenerator.h render/MainWindow.cpp render/MainWindow.h render/shaders.cpp core/Quaternion.cpp core/Quaternion.h physics/RigidBody.cpp physics/RigidBody.h physics/RigidBodyModel.h physics/RigidBodyModel.cpp render/Renderable.h)
add_executable(PhysicsEngine main.cpp ${SOURCES})

target_link_libraries(PhysicsEngine ${SDL2_LIBRARIES} "-framework OpenGL")